syntax = "proto2";

package io.kf.etl.es;

message FileCentric_ES {
    repeated string acl = 1;
    optional bool controlled_access = 2;
    optional string data_type = 3;
    optional string file_format = 4;
    optional string file_name = 5;
    optional int64 size = 6;
    optional string kf_id = 7;
    repeated Participant_ES participants = 8;
    repeated SequencingExperiment_ES sequencing_experiments = 9;
    optional string reference_genome = 10;
    optional bool is_harmonized = 11;
    optional string latest_did = 12;
}

message ParticipantCentric_ES {
    optional string alias_group = 1;
    repeated Biospecimen_ES biospecimens = 2;
    optional string consent_type = 3;
    repeated Diagnosis_ES diagnoses = 4;
    optional string ethnicity = 5;
    optional string external_id = 6;
    optional Family_ES family = 7;
    repeated File_ES files = 8;
    optional string gender = 9;
    optional bool is_proband = 10;
    optional string kf_id = 11;
    optional Outcome_ES outcome = 12;
    optional Phenotype_ES phenotype = 13;
    optional string race = 14;
    optional Study_ES study = 15;
    repeated string available_data_types = 16;
}

message Participant_ES {
    optional string alias_group = 1;
    repeated Biospecimen_ES biospecimens = 2;
    optional string consent_type = 3;
    repeated Diagnosis_ES diagnoses = 4;
    optional string ethnicity = 5;
    optional string external_id = 6;
    optional Family_ES family = 7;
    optional string family_id = 8;
    optional string gender = 9;
    optional bool is_proband = 10;
    optional string kf_id = 11;
    optional Outcome_ES outcome = 12;
    optional Phenotype_ES phenotype = 13;
    optional string race = 14;
    optional Study_ES study = 15;
    repeated string available_data_types = 16;
}

message Biospecimen_ES {
    optional int32 age_at_event_days = 1;
    optional string analyte_type = 2;
    optional string composition = 3;
    optional double concentration_mg_per_ml = 4;
    optional string dbgap_consent_code =  5;
    optional string external_aliquot_id = 6;
    optional string external_sample_id = 7;
    optional string kf_id = 8;
    optional string ncit_id_anatomical_site = 9;
    optional string ncit_id_tissue_type = 10;
    optional string shipment_date = 11;
    optional string shipment_origin = 12;
    repeated string genomic_files = 13;
    optional string participant_id = 14;
    optional string source_text_tumor_descriptor = 15;
    optional string source_text_tissue_type = 16;
    optional string source_text_anatomical_site = 17;
    optional string spatial_descriptor = 18;
    optional string uberon_id_anatomical_site = 19;
    optional double volume_ml = 20;
    optional string sequencing_center_id = 21;
}

message Diagnosis_ES {
    optional int32 age_at_event_days = 1;
    optional string diagnosis_category = 2;
    optional string external_id = 3;
    optional string icd_id_diagnosis = 4;
    optional string kf_id = 5;
    optional string mondo_id_diagnosis = 6;
    optional string participant_id = 7;
    optional string source_text_diagnosis = 8;
    optional string uberon_id_tumor_location = 9;
    optional string source_text_tumor_location = 10;
    optional string ncit_id_diagnosis = 11;
    optional string spatial_descriptor = 12;
}

message Family_ES {
    optional string family_id = 1;
    repeated FamilyComposition_ES family_compositions = 2;
    optional string father_id = 3;
    optional string mother_id = 4;
}

message FamilyComposition_ES {
    optional string composition = 1;
    repeated string shared_hpo_ids = 2;
    repeated string available_data_types = 3;
    repeated FamilyMember_ES family_members = 4;
}

message FamilyMember_ES {
    optional string alias_group = 1;
    optional string relationship = 2;
    optional string consent_type = 3;
    repeated Diagnosis_ES diagnoses = 4;
    optional string ethnicity = 5;
    optional string external_id = 6;
    optional string gender = 7;
    optional bool is_proband = 8;
    optional string kf_id = 9;
    optional Outcome_ES outcome = 10;
    optional Phenotype_ES phenotype = 11;
    optional string race = 12;
    repeated string available_data_types = 13;

}

message Outcome_ES {
    optional int32 age_at_event_days = 1;
    optional string disease_related = 2;
    optional string kf_id = 3;
    optional string vital_status = 4;

}

message Phenotype_ES {
    optional HPO_ES hpo = 1;
}

message HPO_ES {
    repeated int32 age_at_event_days = 1;
    repeated string ancestral_hpo_ids = 2;
    repeated string external_id = 3;
    repeated string hpo_phenotype_not_observed = 4;
    repeated string hpo_phenotype_observed = 5;
    repeated string shared_hpo_ids = 6;
    repeated string snomed_phenotype_not_observed = 7;
    repeated string snomed_phenotype_observed = 8;
    repeated string source_text_phenotype = 9;
}

message Study_ES {
    optional string kf_id = 1;
    optional string attribution = 2;
    optional string name = 3;
    optional string version = 4;
    optional string external_id = 5;
    optional string release_status = 6;
    optional string data_access_authority = 7;
    optional string short_name = 8;
}

message SequencingExperiment_ES {
    optional string kf_id = 1;
    optional string experiment_date = 2;
    optional string experiment_strategy = 3;
    optional string sequencing_center_id = 4;
    optional string library_name = 5;
    optional string library_strand = 6;
    optional bool is_paired_end = 7;
    optional string platform = 8;
    optional string instrument_model = 9;
    optional int64 max_insert_size = 10;
    optional double mean_insert_size = 11;
    optional double mean_depth = 12;
    optional int64 total_reads = 13;
    optional double mean_read_length = 14;
    optional string external_id = 15;
}

message GenomicFile_ES {
    repeated string acl = 1;
    optional bool controlled_access = 2;
    optional string data_type = 3;
    optional string file_format = 4;
    optional string file_name = 5;
    optional int64 size = 6;
    optional string kf_id = 7;
    optional SequencingExperiment_ES sequencing_experiment = 8;
    optional string reference_genome = 9;
    optional bool is_harmonized = 10;
    optional string availability = 11;
    optional string latest_did = 12;
}

message File_ES {
    repeated string acl = 1;
    optional bool controlled_access = 2;
    optional string data_type = 3;
    optional string file_format = 4;
    optional string file_name = 5;
    optional int64 size = 6;
    optional string kf_id = 7;
    repeated SequencingExperiment_ES sequencing_experiments = 8;
    optional string reference_genome = 9;
    optional bool is_harmonized = 10;
    optional string availability = 11;
    optional string latest_did = 12;
}