syntax = "proto3";

option java_package = "io.kf";

message Program {
    string dbgap_accession_number = 1;
    string id = 2;
    string name = 3;
    string type = 4;
    repeated Project project = 5;
}

message Project {
    string code = 1;
    string dbgap_accession_number = 2;
    string disease_type = 3;
    string id = 4;
    string intended_release_date = 5;
    string name = 6;
    string primary_site = 7;
    bool releasable = 8;
    bool released = 9;
    string state = 10;
    string type = 11;
    repeated Case cases = 12;
}

message Case {
    string submitter_id = 1;
    string created_datetime = 2;
    int32 days_to_lost_to_followup = 3;
    string disease_type = 4;
    string id = 5;
    string index_date = 6;
    bool lost_to_followup = 7;
    string primary_site = 8;
    string project_id = 9;
    string state = 10;
    string type = 11;
    string updated_datetime = 12;
    repeated Demographic demographic = 13;
    repeated Diagnosis diagnosis = 14;
    repeated Sample sample = 15;
    repeated Trio trio = 16;
}

message Demographic {
    int32 age_at_last_follow_up_days = 1;
    string cauth_of_death = 2;
    string created_datetime = 3;
    string ethnicity = 4;
    string gender = 5;
    string id = 6;
    string project_id = 7;
    string race =8;
    string state = 9;
    string submitter_id = 10;
    string type = 11;
    string updated_datetime = 12;
    string vital_status = 13;
}

message Diagnosis {
    int32 age_at_diagnosis_days = 1;
    string created_datetime = 2;
    string id = 3;
    string primary_anatomic_site = 4;
    string primary_diagnosis = 5;
    string state = 6;
    string submitter_id = 7;
    string type = 8;
    string updated_datetime = 9;
}

message Trio {
    string created_datetime = 1;
    string id = 2;
    string project_id= 3;
    string state = 4;
    string submitter_id = 5;
    string type = 6;
    string updated_datetime = 7;
}

message Sample {
    repeated Aliquot aliquot = 1;
    string biospecimen_anatomic_site = 2;
    string composition = 3;
    string created_datetime = 4;
    int64 current_weight = 5;
    int32 days_to_collection = 6;
    int32 days_to_sample_procurement = 7;
    string diagnosis_pathologically_confirmed = 8;
    string id = 9;
    int64 initial_weight = 10;
    int32 intermediate_dimension = 11;
    int32 longest_dimension = 12;
    string method_of_sample_procurement = 13;
    string preservation_method = 14;
    string project_id = 15;
    int32 shortest_dimension = 16;
    string state = 17;
    string submitter_id = 18;
    int32 time_between_clamping_and_freezing = 19;
    int32 time_between_excision_and_freezing = 20;
    string tissue_type = 21;
    string tumor_descriptor = 22;
    string type = 23;
    string updated_datetime = 24;
}

message Aliquot {
    repeated Read_Group readGroups = 1;
    double a260_a280_ratio = 2;
    int64 aliquot_quantity = 3;
    int64 aliquot_volume = 4;
    int32 amount = 5;
    int64 analyte_quantity = 6;
    string analyte_type = 7;
    int64 analyte_volume = 8;
    int64 concentration = 9;
    string created_datetime = 10;
    string id = 11;
    string normal_tumor_genotype_snp_match = 12;
    string project_id = 13;
    double ribosomal_rna_28s_16s_ratio = 14;
    string shipment_date = 15;
    string shipment_destination = 16;
    string shipment_origin = 17;
    string source_center = 18;
    string spectrophotometer_method = 19;
    string state = 20;
    string submitter_id = 21;
    string type = 22;
    string updated_datetime = 23;
    string well_number = 24;
}

message Read_Group {
    repeated Submitted_Aligned_Reads submittedAlignedReads = 1;
    int32 RIN = 2;
    string adapter_name = 3;
    string adapter_sequence = 4;
    string base_caller_name = 5;
    string base_caller_version = 6;
    string created_datetime = 7;
    string experiment_name = 8;
    string flow_cell_barcode = 9;
    string id = 10;
    bool includes_spike_ins = 11;
    string instrument_model = 12;
    bool is_paired_end = 13;
    string library_name = 14;
    string library_preparation_kit_catalog_number = 15;
    string library_preparation_kit_name = 16;
    string library_preparation_kit_vendor = 17;
    string library_preparation_kit_version = 18;
    string library_selection = 19;
    string library_strand = 20;
    string library_strategy = 21;
    string platform = 22;
    string project_id = 23;
    string read_group_name = 24;
    int32 read_length = 25;
    string sequencing_center = 26;
    string sequencing_date = 27;
    string size_selection_range = 28;
    string spike_ins_concentration = 29;
    string spike_ins_fasta = 30;
    string state = 31;
    string submitter_id = 32;
    string target_capture_kit_catalog_number = 33;
    string target_capture_kit_name = 34;
    string target_capture_kit_target_region = 35;
    string target_capture_kit_vendor = 36;
    string target_capture_kit_version = 37;
    bool to_trim_adapter_sequence = 38;
    string type = 39;
    string updated_datetime = 40;
}

message Submitted_Aligned_Reads {
    string created_datetime = 1;
    string data_category = 2;
    string data_format = 3;
    string data_type = 4;
    string error_type = 5;
    string experimental_strategy = 6;
    string file_name = 7;
    int32 file_size = 8;
    string file_state = 9;
    string id = 10;
    string md5sum = 11;
    string project_id = 12;
    string state = 13;
    string state_comment = 14;
    string submitter_id = 15;
    string type = 16;
    string updated_datetime = 17;
}
